docs/version-1.12/modules/en/pages/snapshots-backups/csi-snapshots/enable-csi-snapshot-creation.adoc
= Enable CSI Snapshot Creation on a Cluster
:revdate: 2026-05-06
:page-revdate: {revdate}
:description: Enable CSI Snapshot Support for Programmatic Creation of SUSE® Storage Snapshots/Backups
:current-version: {page-component-version}

== Prerequisites

It is the responsibility of the Kubernetes distribution to deploy the snapshot controller as well as the related custom resource definitions.

For more information, see https://kubernetes.io/docs/concepts/storage/volume-snapshots/[CSI Volume Snapshots].

== If your Kubernetes Distribution Does Not Bundle the Snapshot Controller

You may manually install these components.

=== Prerequisites

Please install the snapshot CRDs and snapshot controller from the same release version to ensure that the CRD version is compatible with the controller. You can refer to the external snapshotter version `image.csi.snapshotter.tag` listed in xref:installation-setup/installation/helm-values.adoc[Helm Values] to determine which version of the snapshot CRDs and snapshot controller to install. Then replace `<version>` in the following steps with the appropriate version. For example, if the external snapshotter version is `v8.5.0-xxx`, use `v8.5.0` for both the snapshot CRDs and snapshot controller.

For general use, update the snapshot controller YAMLs with an appropriate *namespace* prior to installing.

For example, on a vanilla Kubernetes cluster, update the namespace from `default` to `kube-system` prior to issuing the `kubectl create` command.

=== Install the Snapshot CRDs

. Download the files from `https://github.com/kubernetes-csi/external-snapshotter/tree/<version>/client/config/crd`.
. Run `kubectl create -k client/config/crd`.
. Do this once per cluster.

=== Install the Common Snapshot Controller

. Download the files from `https://github.com/kubernetes-csi/external-snapshotter/tree/<version>/deploy/kubernetes/snapshot-controller`.
. Update the namespace to an appropriate value for your environment (for example, `kube-system`).
. Run `kubectl create -k deploy/kubernetes/snapshot-controller`.
. Do this once per cluster.
+
[NOTE]
====
Previously, the snapshot controller YAML files were deployed into the `default` namespace by default.
The updated YAML files are being deployed into `kube-system` namespace by default.
Therefore, we suggest deleting the previous snapshot controller in the `default` namespace to avoid having multiple snapshot controllers.
====

See the https://github.com/kubernetes-csi/external-snapshotter#usage[Usage] section from the kubernetes
external-snapshotter git repo for additional information.

== Add a Default `VolumeSnapshotClass`

Ensure the availability of the Snapshot CRDs. Afterwards create a default `VolumeSnapshotClass`.

[subs="+attributes",yaml]
----
# Use v1 as an example
kind: VolumeSnapshotClass
apiVersion: snapshot.storage.k8s.io/v1
metadata:
  name: longhorn
driver: driver.longhorn.io
deletionPolicy: Delete
----
